Stop use of component for translations
Why:
----
We have a script that examines the translation keys used throughout the
application and updates the ones that are new or unused for uploading
and completing the rest of such translations. We would like to use this
script to automate the task of finding unused translation keys but we
are seeing erroneous output when executed.
The reason for it is that the parser is encountering a `Trans` component
that comes directly from the library creators but that the parsers do
not recognize. In our particular case we are seeing that a key like:

```
<0></0><1></1>: <0></0><1></1>
```

Is being added when executing `yarn i18next`. There are [issues]
documenting extraneous behavior with this component. Since the usage we
were giving it was pretty small, we might benefit from not using it and
avoid fighting the issue while gaining confidence in our `yarn i18next`
script.

[issues]: https://github.com/i18next/i18next-parser/issues

This Commit:
----
- Removes the usage of the `Trans` component from i18next
- Re-arrange action button text for EmergencyAssessment screen to
include the styled texts while not making use of the i18next syntax for
the translation component

Reviewers:
----
I worked a bit to make the parser agree with the use of the trans
component but hit a brick wall and couldn't advance further. It appeared
that the use of this component didn't grant all the effort so I opted
for removing it. Happy to continue tinkering further if the benefit
grants it.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,10 @@
     "emergency_cta": "Call 911",
     "emergency_description": " Based on your reported symptoms, you should seek care immediately.",
     "emergency_title": "Call Emergency Services",
+    "experiencing_any_symptoms": "experiencing any of these symptoms",
+    "experiencing_symptoms": "experiencing at least one of these symptoms",
+    "i_am": "I am",
+    "i_am_not": "I am not",
     "isolate_cta": "Next",
     "isolate_description": "You have some symptoms that may be related to COVID-19. Call your healthcare provider if your symptoms get worse. Start home isolation.",
     "isolate_title": "Isolate Yourself",
@@ -89,9 +93,9 @@
       "today": "Today"
     },
     "next_steps": {
-      "maybe_exposed": "You may have been exposed to COVID-19",
       "button_text": "See Recommendations",
       "ha_self_assessment": "Follow the advice from {{healthAuthorityName}} about what to do next.",
+      "maybe_exposed": "You may have been exposed to COVID-19",
       "possible_crossed_paths": "Based on your location history, it is possible that you may have crossed paths with somebody who has been diagnosed with COVID-19.",
       "possible_infection_precaution": "This does not mean that you are infected, but you should take precautions anyway. People who don't exhibit symptoms can sometimes still be contagious."
     },
@@ -160,11 +164,10 @@
   },
   "screen_titles": {
     "about": "About",
-    "exposure_history": "Exposure History",
     "debug": "Debug",
-    "select_language": "Select Language",
+    "exposure_history": "Exposure History",
     "legal": "Legal",
-    "more_info": "More Info"
+    "select_language": "Select Language"
   },
   "settings": {
     "share_test_result": "Report Positive Test Result",
