--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,9 +24,9 @@
     "emergency_description": " Based on your reported symptoms, you should seek care immediately.",
     "emergency_title": "Call Emergency Services",
     "experiencing_any_symptoms": "experiencing any of these symptoms",
-    "experiencing_symptoms": "experiencing at least one of these symptoms",
-    "i_am": "I am",
-    "i_am_not": "I am not",
+    "experiencing_some_symptoms": "experiencing some of these symptoms",
+    "i_am": "I am ",
+    "i_am_not": "I am not ",
     "isolate_cta": "Next",
     "isolate_description": "You have some symptoms that may be related to COVID-19. Call your healthcare provider if your symptoms get worse. Start home isolation.",
     "isolate_title": "Isolate Yourself",
