Only allow code submission when en are enabled
Why:
Currently, if a user has not enabled exposure notifications for the app
it is possible to try to submit the verification code in the affected
user flow, which will necessarily error as the exposure notification api
must be accessible in order to submit exposure keys.

We would like to make it such that a user cannot submit a verification
code unless the en api is enabled. Additionally, if the user starts the
affected user flow without enabled exposure notifications, they should
be prompted to enable exposure notifications.

This commit:
Adds a conditional to the CodeInputScreen to conditionally render either
the CodeInputForm or an EnableExposureNotifications screen that has a
link to the settings for en notifications.

Co-Authored-By johnschoeman <johnschoeman1617@gmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,6 +51,8 @@
     "code_input_body_bluetooth": "Enter your verification code",
     "code_input_button_cancel": "Cancel",
     "code_input_title_bluetooth": "Verify your diagnosis",
+    "enable_exposure_notifications_title": "Enable exposure notifications to continue",
+    "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
     "complete_body_bluetooth": "By choosing to share your status and anonymously notify others, you’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_button_cancel": "Cancel",
