Update pull and push scripts for lokalise
Why:
----
The push and pull actions for lokalise are not working as expected

This Commit:
----
- Remove location permission strings for iOS
- Extract to `src` not `app`
- Do not search under the `gps` flavor of android to upload files
- Update README portion of scripts with new env variables names
- Change some translations that mention location
- Add option to pull script to include just a set of languages
- Removed unused strings on iOS
- Upload translations from the src folder
- Ran push and updated master translations file on lokalise

Caveat:
----
This Commit does not include the result of running and commiting the
`pull` script since it brings several files into the `iOS` and `android`
projects that might not be necessary. There are more arguments like the
languages to include in the pull we might add to the script.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
     "caregiver_description": "Notify a healthcare provider in your long-term care facility. Living in a long-term care facility or nursing home may put you at risk for severe illness.\n\nTell a caregiver at the facility that you are sick and need to see a medical provider as soon as possible.",
     "caregiver_title": "Notify Caregiver",
     "complete_cta": "Done",
-    "complete_description": "By sharing your health status and location history anonymously with your community, you are being proactive about fighting the spread of COVID-19.",
+    "complete_description": "By sharing your health status and exposure history anonymously with your community, you are being proactive about fighting the spread of COVID-19.",
     "complete_title": "Thanks for keeping your community safe!",
     "distancing_cta": "Next",
     "distancing_description": "Please follow your local, state, or national guidelines for social distancing and Personal Protection Equipment (PPE) like masks and/or gloves. No additional action is needed at this time.",
