--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -86,13 +86,15 @@
       "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you crossed paths with later receives a confirmed, positive diagnosis or test for COVID-19 and chooses to notify others"
     },
     "how_does_this_work": "How does this work?",
-    "last_days": "Last 21 days",
+    "last_days": "Last 14 days",
+    "keep_track_of_exposures": "Keep track of possible exposures detected by your PathCheck app",
     "legend_button": "LEGEND",
     "legend": {
       "exposure_possible": "Possible exposure",
       "no_exposure_detected": "No exposure detected",
       "today": "Today"
     },
+    "possible_exposure": "Possible COVID-19 exposure",
     "next_steps": {
       "button_text": "See Recommendations",
       "ha_self_assessment": "Follow the advice from {{healthAuthorityName}} about what to do next.",
