--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,12 +91,13 @@
       "today": "Today"
     },
     "possible_exposure": "Possible COVID-19 exposure",
-    "next_steps": {
+    "exposure_detail": {
       "button_text": "See Recommendations",
-      "ha_self_assessment": "Follow the advice from {{healthAuthorityName}} about what to do next.",
-      "maybe_exposed": "You may have been exposed to COVID-19",
-      "possible_crossed_paths": "Based on your location history, it is possible that you may have crossed paths with somebody who has been diagnosed with COVID-19.",
-      "possible_infection_precaution": "This does not mean that you are infected, but you should take precautions anyway. People who don't exhibit symptoms can sometimes still be contagious."
+      "ha_guidance_header": "What should I do?",
+      "ha_guidance_more": "Read More",
+      "ha_guidance_subheader": "See guidance from {{healthAuthorityName}}.",
+      "header": "You may have crossed paths with the COVID-19 virus.",
+      "content": "Someone you were nearby has since tested positive for COVID-19."
     },
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?"
