--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,16 +47,21 @@
     "submit": "Submit",
     "success": "Success"
   },
+  "errors": {
+    "description": "An error has ocurred. Please reload the app.",
+    "reload": "Reload",
+    "title": "Unknown Error"
+  },
   "export": {
     "code_input_body_bluetooth": "Enter your verification code",
     "code_input_button_cancel": "Cancel",
     "code_input_title_bluetooth": "Verify your diagnosis",
-    "enable_exposure_notifications_title": "Enable exposure notifications to continue",
-    "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
     "complete_body_bluetooth": "By choosing to share your status and anonymously notify others, you’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_button_cancel": "Cancel",
     "consent_button_title": "I understand and consent",
+    "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
+    "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "error": {
       "invalid_code": "Try a different code",
       "unknown_code_verification_error": "Try a different code",
@@ -67,44 +72,20 @@
     "start_body_bluetooth": "Choose to anonymously notify others you may have encountered and help your community contain the spread of the virus.",
     "start_title_bluetooth": "Help contain the spread of the virus and protect others in your community if you're diagnosed or test positive for COVID-19."
   },
-  "exposure_datum": {
-    "no_data": {
-      "explanation": "This happens when location access is disabled for your PathCheck app or the date selected was more than 14 days ago. No exposure notifications will be available for this day."
-    },
-    "no_known": {
-      "explanation": "Your exposure history will be updated if this changes in the future."
-    },
-    "possible": {
-      "duration": "Possible Exposure Time: {{duration}}",
-      "explanation": "For {{duration}}, your phone was within 10 feet of someone who later received a confirmed positive COVID-19 diagnosis.",
-      "what_next": "What should I do next?"
-    }
-  },
   "exposure_history": {
-    "how_does_this_work_para": "When Exposure Notifications are on, your phone uses Bluetooth to swap and save random number strings (called random IDs) from any phones it encounters that also have Exposure Notifications enabled. Random IDs won’t identify you personally to other users and change many times a day to protect your privacy. Date and duration of the encounter are recorded along with an estimate of how close the two phones may have been. When a person reports a positive diagnosis, their phone’s recent random IDs are flagged to anonymously notify others. No locations or personal info is shared.",
-    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you crossed paths with later receives a confirmed, positive diagnosis or test for COVID-19 and chooses to notify others",
+    "exposure_detail": {
+      "content": "Someone you were nearby has since tested positive for COVID-19.",
+      "header": "You may have crossed paths with the COVID-19 virus."
+    },
     "how_does_this_work": "How does this work?",
+    "how_does_this_work_para": "When Exposure Notifications are on, your phone uses Bluetooth to swap and save random number strings (called random IDs) from any phones it encounters that also have Exposure Notifications enabled. Random IDs won’t identify you personally to other users and change many times a day to protect your privacy. Date and duration of the encounter are recorded along with an estimate of how close the two phones may have been. When a person reports a positive diagnosis, their phone’s recent random IDs are flagged to anonymously notify others. No locations or personal info is shared.",
+    "last_days": "Last 14 days",
     "no_exposure_reports": "No Exposure Reports",
     "no_exposure_reports_over_past": "You haven't received any exposure report over the past 14-days",
-    "last_days": "Last 14 days",
-    "keep_track_of_exposures": "Keep track of possible exposures detected by your PathCheck app",
-    "legend_button": "LEGEND",
-    "legend": {
-      "exposure_possible": "Possible exposure",
-      "no_exposure_detected": "No exposure detected",
-      "today": "Today"
-    },
     "possible_exposure": "Possible COVID-19 exposure",
-    "exposure_detail": {
-      "button_text": "See Recommendations",
-      "ha_guidance_header": "What should I do?",
-      "ha_guidance_more": "Read More",
-      "ha_guidance_subheader": "See guidance from {{healthAuthorityName}}.",
-      "header": "You may have crossed paths with the COVID-19 virus.",
-      "content": "Someone you were nearby has since tested positive for COVID-19."
-    },
     "updated": "Updated",
-    "why_did_i_get_an_en": "Why did I get an exposure notification?"
+    "why_did_i_get_an_en": "Why did I get an exposure notification?",
+    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you crossed paths with later receives a confirmed, positive diagnosis or test for COVID-19 and chooses to notify others"
   },
   "home": {
     "bluetooth": {
@@ -183,10 +164,5 @@
   "settings": {
     "share_test_result": "Report Positive Test Result",
     "share_test_result_description": "Anonymously notify others you may have recently encountered if you test positive for COVID-19"
-  },
-  "errors": {
-    "title": "Unknown Error",
-    "description": "An error has ocurred. Please reload the app.",
-    "reload": "Reload"
   }
 }
