--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,7 +85,12 @@
     "possible_exposure": "Possible COVID-19 exposure",
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
-    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you crossed paths with later receives a confirmed, positive diagnosis or test for COVID-19 and chooses to notify others"
+    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you crossed paths with later receives a confirmed, positive diagnosis or test for COVID-19 and chooses to notify others",
+    "exposure_window": {
+      "today_to_three_days_ago": "Within the last 3 days",
+      "four_to_six_days_ago": "4 to 6 days ago",
+      "seven_to_fourteen_days_ago": "7 to 14 days ago"
+    }
   },
   "home": {
     "bluetooth": {
