Update permissions en status and request on home
Why:
There are some inconsistencies in how we are receiving the devices en
permission status.

This commit:
Changes the check of the devices exposureNotificationStatus to check
against the status directly vs. via the exposureNotificationsEnabled
method. We also directly request permissions in the app when the app is
unauthorized rather than making the user open the os settings and
manually updating the permissions.

Co-Authored-By: mattthousand <matt@nicethings.io>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -62,6 +62,7 @@
     "consent_button_title": "I understand and consent",
     "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
+    "enable_permissions": "Enable Permissions",
     "error": {
       "invalid_code": "Try a different code",
       "unknown_code_verification_error": "Try a different code",
