--- a/android/app/src/bt/res/values-ru/strings.xml
+++ b/android/app/src/bt/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
   <!-- Channel label for notifications shown in App > Notifications > Path Check BT -->
-  <string name="notification_channel_description">Настроить местные оповещения</string>
+  <string name="notification_channel_description">PathCheck BT уведомления</string>
 </resources>
