Fix typo on exposure history screen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -101,7 +101,7 @@
     "last_days": "Last 14 days",
     "learn_more": "Learn More",
     "no_exposure_reports": "No Exposure Reports",
-    "no_exposure_reports_over_past": "You haven't received any exposure report over the past 14-days",
+    "no_exposure_reports_over_past": "You haven't received any exposure reports over the past 14-days",
     "possible_exposure": "Possible COVID-19 exposure",
     "protect_yourself_and_others": "Protect yourself and others in your community",
     "review_guidance_from_ha": "Review guidance from {{healthAuthorityName}}",
