Update EulaModal placement and design
Why: the design of our Eula acceptance has changed.

This commit:
- Moves the Eula acceptance to the front of the Activation stack
- Updates the design of the Eula acceptance screen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -132,6 +132,8 @@
     "calendar_icon": "Calendar icon",
     "check": "Checkmark",
     "checkbox": "Checkbox",
+    "checked_checkbox": "Checked checkbox",
+    "unchecked_checkbox": "Unchecked checkbox",
     "close": "Close",
     "description_optional": "Description (Optional)",
     "email_optional": "Email (Optional)",
