--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,7 @@
     "done": "Done",
     "settings": "Open Settings",
     "something_went_wrong": "Something went wrong",
+    "skip": "Skip",
     "start": "Start",
     "submit": "Submit",
     "success": "Success"
