--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,19 +32,19 @@
     "isolate_title": "Isolate Yourself",
     "next": "Next",
     "share_cta": "I understand and consent",
-    "share_cta_skip": "No thanks, I don't want to share data",
     "share_description": "Your anonymous data helps the {{authority}} analyze, track, and contain the spread of COVID-19. Your data will be aggregated that from other PathCheck users who choose to share.\n\nYour data contains your survey responses and zip code, but no additional or personally-identifying information.\n\nThe {{authority}} will retain your anonymous data for a specific period of time.",
     "share_title": "Publish anonymized data",
     "start_cta": "Start",
     "start_description": "Your information is private, anonymized, and encrypted. No data leaves your device unless you give permission.",
-    "start_title": "Answer questions about your symptoms and medical history to learn what to do next about COVID-19"
+    "start_title": "Answer questions about your symptoms and medical history to learn what to do next about COVID-19",
+    "share_cta_skip": "No thanks, I don't want to share data"
   },
   "common": {
     "continue": "Continue",
     "done": "Done",
     "settings": "Open Settings",
-    "something_went_wrong": "Something went wrong",
     "skip": "Skip",
+    "something_went_wrong": "Something went wrong",
     "start": "Start",
     "submit": "Submit",
     "success": "Success"
@@ -113,7 +113,6 @@
   },
   "home": {
     "bluetooth": {
-      "all_services_on_header": "PathCheck",
       "all_services_on_subheader": "Exposure notifications are on",
       "tracing_off_button": "Allow Exposure Notifications",
       "tracing_off_header": "Exposure Notifications Disabled",
@@ -126,7 +125,6 @@
     "about_para": "The PathCheck app is made available by the PathCheck Foundation, a non-profit organization that is committed to providing free software to help stop the spread of COVID-19 and protect the privacy of individuals. \n\nFor more information, visit:",
     "assessment_icon": "Clipboard icon with checkmark inside",
     "bell_icon": "Bell icon",
-    "bluetooth_icon": "Searching bluetooth device icon",
     "calendar_icon": "Calendar icon",
     "check": "Checkmark",
     "checkbox": "Checkbox",
@@ -134,7 +132,6 @@
     "description_optional": "Description (Optional)",
     "email_optional": "Email (Optional)",
     "exposure_icon": "Circle icon with eight dots surrounding it",
-    "heart_icon": "Heart icon with cross inside",
     "home_icon": "Home icon",
     "language_icon": "Outlined icon of a globe",
     "launch_disable_exposure_notif": "Don't Enable",
@@ -145,8 +142,6 @@
     "launch_get_started": "Get Started",
     "launch_next": "Next",
     "launch_screen1_header": "Welcome to ",
-    "launch_screen2_header_bluetooth": "Your phone remembers other devices it meets but won't identify you to other people.",
-    "launch_screen2_subheader_bluetooth": "Nearby phones use Bluetooth to share and save random number strings to recall devices nearby.\n\nIf a person reports a positive diagnosis, their phone's recent random IDs are flagged to anonymously notify others. No locations or personal info is shared.",
     "launch_screen3_header_bluetooth": "Receive notifications when someone you encountered later chooses to report a positive diagnosis.",
     "launch_screen3_subheader_bluetooth": "Learn details about the encounter, such as the date, duration, and Bluetooth signal strength.",
     "launch_screen4_header_bluetooth": "If you test positive for the virus that causes COVID-19, you can choose to share your diagnosis anonymously.",
@@ -154,6 +149,16 @@
     "launch_set_up_phone_bluetooth": "Next",
     "legal_page_address": "PathCheck Foundation\n58 Day Street\nBox 441621\nSomerville, MA 02144",
     "more_icon": "Icon of three horizontal dots",
+    "onboarding_screen1_header": "Together, we can contain the spread of COVID-19",
+    "onboarding_screen1_button": "How does it work?",
+    "onboarding_screen2_header": "Your phone remembers other devices it meets, but won't identify you to anyone",
+    "onboarding_screen2_button": "Is my privacy protected?",
+    "onboarding_screen3_header": "No personally identifiable information ever leaves your phone",
+    "onboarding_screen3_button": "What if I'm exposed?",
+    "onboarding_screen4_header": "The app will notify you if you may have been exposve to the coronavirus",
+    "onboarding_screen4_button": "What if I get sick?",
+    "onboarding_screen5_header": "With the app, you can help break the chain of infection and get help direct from health experts",
+    "onboarding_screen_5_button": "Get started",
     "privacy_policy": "Privacy Policy",
     "question_icon": "Question mark icon",
     "unknown": "unknown"
