--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,6 +42,8 @@
   "common": {
     "continue": "Continue",
     "done": "Done",
+    "maybe_later": "Maybe later",
+    "no_thanks": "No thanks",
     "settings": "Open Settings",
     "skip": "Skip",
     "something_went_wrong": "Something went wrong",
@@ -134,11 +136,7 @@
     "exposure_icon": "Circle icon with eight dots surrounding it",
     "home_icon": "Home icon",
     "language_icon": "Outlined icon of a globe",
-    "launch_disable_exposure_notif": "Don't Enable",
-    "launch_enable_exposure_notif": "Enable",
     "launch_enable_notif": "Enable Notifications",
-    "launch_exposure_notif_header": "Enable Exposure Notifications",
-    "launch_exposure_notif_subheader": "To be notified about updates to your exposure history, your phone needs permission to exchange anonymous Bluetooth random ID with other devices.\n\nExposure Notifications only work with other devices with the setting enabled.\n\nYou can turn off this notifications at any time.",
     "launch_get_started": "Get Started",
     "launch_next": "Next",
     "launch_screen1_header": "Welcome to ",
@@ -176,9 +174,21 @@
   },
   "onboarding": {
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
-    "maybe_later": "Maybe Later",
-    "notification_header": "Would you like to receive notifications when you may have crossed paths with the virus?",
-    "notification_subheader": "PathCheck partners with local Health Departments to track the virus. If you are located in a jurisdiction served by one of our Health Department partners, you can receive exposure notifications from your Health Department."
+    "notification_header": "Get notified if you may have been exposed",
+    "notification_subheader1": "When will I get notified?",
+    "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
+    "notification_subheader2": "How does it work?",
+    "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
+    "notification_subheader3": "This app does not protect you from COVID-19 infection.",
+    "dont_enable_proximity_tracing": "Don't Enable",
+    "enable_proximity_tracing": "Enable",
+    "proximity_tracing_header": "Activate Proximity Tracing",
+    "proximity_tracing_subheader1": "How does Proximity Tracing work?",
+    "proximity_tracing_body1": "If smartphones with the app installed are turned on, have bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
+    "proximity_tracing_subheader2": "Is my data secure?",
+    "proximity_tracing_body2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
+    "proximity_tracing_subheader3": "This app does not protect you from COVID-19 infection.",
+    "proximity_tracing_button": "Activate Proximity Tracking"
   },
   "screen_titles": {
     "about": "About",
