Validate emails on the zendesk side
Why:
----
Since most likely our email validation is poorer than the one on the
zendesk side, we will delegate that task to them and parse the response
from the backend.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -206,6 +206,9 @@
   "report_issue": {
     "body": "Feedback (required)",
     "email": "Email (required)",
+    "errors": {
+      "invalid_email": "The email seems to be invalid, please check again"
+    },
     "name": "Full Name",
     "success": "We received your request. Thank you!"
   },
