--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -149,14 +149,19 @@
     "more_icon": "Icon of three horizontal dots",
     "onboarding_screen1_header": "Together, we can contain the spread of COVID-19",
     "onboarding_screen1_button": "How does it work?",
+    "onboarding_screen1_image_label": "Two people high fiving each other",
     "onboarding_screen2_header": "Your phone remembers other devices it meets, but won't identify you to anyone",
     "onboarding_screen2_button": "Is my privacy protected?",
+    "onboarding_screen2_image_label": "Two people on their phones",
     "onboarding_screen3_header": "No personally identifiable information ever leaves your phone",
     "onboarding_screen3_button": "What if I'm exposed?",
+    "onboarding_screen3_image_label": "A person in front of a locked phone",
     "onboarding_screen4_header": "The app will notify you if you may have been exposed to the coronavirus",
     "onboarding_screen4_button": "What if I get sick?",
+    "onboarding_screen4_image_label": "A person getting a notification on their phone",
     "onboarding_screen5_header": "With the app, you can help break the chain of infection and get help direct from health experts",
     "onboarding_screen_5_button": "Get started",
+    "onboarding_screen5_image_label": "A person talking to a health expert virtually",
     "privacy_policy": "Privacy Policy",
     "question_icon": "Question mark icon",
     "unknown": "unknown"
