--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -15,7 +15,8 @@
   },
   "common": {
     "continue": "Fortsæt",
-    "done": "Udført"
+    "done": "Udført",
+    "next": "Udført"
   },
   "home": {
     "bluetooth": {
