--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -38,6 +38,7 @@
   "common": {
     "continue": "Συνέχεια",
     "done": "Ολοκληρώθηκε",
+    "next": "Επόμενο",
     "settings": "Άνοιγμα Ρυθμίσεων",
     "something_went_wrong": "Κάτι πήγε στραβά",
     "start": "Εκκίνηση",
@@ -107,6 +108,8 @@
     "self_assessment": "Υγεία"
   },
   "onboarding": {
+    "dont_enable_proximity_tracing": "Μην ενεργοποιήσετε",
+    "enable_proximity_tracing": "Ενεργοποίηση",
     "maybe_later": "Ίσως αργότερα",
     "notification_header": "Θα θέλατε να λαμβάνετε ειδοποιήσεις όταν ενδέχεται να έχετε έρθει σε επαφή με τον ιό;",
     "notification_subheader": "Για να λαμβάνετε ειδοποιήσεις έκθεσης, πρέπει να βρίσκεστε σε περιοχή που καλύπτεται από έναν τοπικό συνεργάτη του Τμήματος Υγείας.  Εάν δεν υπάρχει ακόμη τοπικό ή περιφερειακό τμήμα Υγείας στην περιοχή σας, ειδοποιηθείτε όταν προστεθούν νέα Τμήματα Υγείας κοντά σας. "
