--- a/src/locales/ml_IN.json
+++ b/src/locales/ml_IN.json
@@ -13,7 +13,8 @@
   },
   "common": {
     "continue": "തുടരുക",
-    "done": "ചെയ്‌തു"
+    "done": "ചെയ്‌തു",
+    "next": "ചെയ്‌തു"
   },
   "label": {
     "launch_enable_notif": "അറിയിപ്പുകൾ പ്രവർത്തനക്ഷമമാക്കുക",
