--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -34,6 +34,7 @@
   "common": {
     "continue": "Продолжить",
     "done": "Готово",
+    "next": "Готово",
     "something_went_wrong": "Что-то пошло не так",
     "start": "Начать"
   },
@@ -84,6 +85,8 @@
     "more": "Подробнее"
   },
   "onboarding": {
+    "dont_enable_proximity_tracing": "Не включать",
+    "enable_proximity_tracing": "Включить",
     "notification_header": "Хотите получать уведомления, если окажетесь поблизости с носителем вируса?",
     "notification_subheader": "Чтобы получать уведомления о нахождении в опасной зоне, вам необходимо находиться в местности, охватываемой местным департамента здравоохранения, работающим с PathCheck.\n\nЕсли в вашем регионе пока нет местных или региональных отделов здравоохранения, работающих с PathCheck, включите уведомление, чтобы узнать, когда такие организации появятся поблизости."
   },
