--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -34,6 +34,7 @@
   "common": {
     "continue": "Continuar",
     "done": "Hecho",
+    "next": "Siguiente",
     "something_went_wrong": "Algo salió mal",
     "start": "Empezar"
   },
@@ -91,6 +92,8 @@
     "self_assessment": "Salud"
   },
   "onboarding": {
+    "dont_enable_proximity_tracing": "No habilitar",
+    "enable_proximity_tracing": "Habilitar",
     "notification_header": "¿Desea recibir notificaciones cuando pueda haberse cruzado con el virus?",
     "notification_subheader": "Para recibir las notificaciones de exposición, es necesario estar en una zona cubierta por un socio del Departamento de Salud local.\n\nSi aún no hay un Departamento de Salud asociado local o regional en su área, notifíquelo cuando se agreguen nuevos Departamentos de Salud cerca de usted."
   },
