--- a/src/locales/fil.json
+++ b/src/locales/fil.json
@@ -7,7 +7,8 @@
     "next": "Susunod"
   },
   "common": {
-    "continue": "Ituloy"
+    "continue": "Ituloy",
+    "next": "Susunod"
   },
   "home": {
     "bluetooth": {
