--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -13,7 +13,8 @@
   },
   "common": {
     "continue": "Continuar",
-    "done": "Feito"
+    "done": "Feito",
+    "next": "Feito"
   },
   "home": {
     "bluetooth": {
