--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -6,6 +6,9 @@
     "isolate_cta": "Înainte",
     "next": "Înainte"
   },
+  "common": {
+    "next": "Înainte"
+  },
   "home": {
     "bluetooth": {
       "all_services_on_header": "PathCheck"
