--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -6,6 +6,9 @@
     "isolate_cta": "下一個",
     "next": "下一個"
   },
+  "common": {
+    "next": "下一個"
+  },
   "label": {
     "launch_enable_notif": "開啟通知",
     "launch_get_started": "開始",
