--- a/android/app/src/main/res/values-el/strings.xml
+++ b/android/app/src/main/res/values-el/strings.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="exposure_notification_channel_description">Ειδοποιήσεις έκθεσης</string>
+  <string name="exposure_notification_channel_name">Ειδοποίηση έκθεσης</string>
+  <string name="exposure_notification_message">Κάποιος που βρέθηκε κοντά σας έχει διαγνωστεί θετικά με COVID-19. Πατήστε για περισσότερες πληροφορίες.</string>
+  <string name="exposure_notification_title">Πιθανή έκθεση στον COVID-19</string>
+  <!-- Channel label for notifications shown in App > Notifications > Path Check BT -->
+  <string name="notification_channel_description">Ειδοποιήσεις PathCheck BT</string>
 </resources>
